--- a/lab-web-scraping.ipynb
+++ b/lab-web-scraping.ipynb
@@ -110,14 +110,132 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "40359eee-9cd7-4884-bfa4-83344c222305",
       "metadata": {
         "id": "40359eee-9cd7-4884-bfa4-83344c222305"
       },
       "outputs": [],
       "source": [
-        "# Your solution goes here"
+        "import requests\n",
+        "from bs4 import BeautifulSoup\n",
+        "import pandas as pd\n",
+        "import time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "fd11d5fc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Función para convertir texto de rating a número\n",
+        "def convert_rating(rating_str):\n",
+        "    ratings = {\"One\": 1, \"Two\": 2, \"Three\": 3, \"Four\": 4, \"Five\": 5}\n",
+        "    return ratings.get(rating_str, 0)\n",
+        "\n",
+        "# Función principal\n",
+        "def scrape_books(min_rating=4, max_price=20):\n",
+        "    base_url = \"http://books.toscrape.com/\"\n",
+        "    current_page = \"catalogue/page-1.html\"\n",
+        "    books = []\n",
+        "\n",
+        "    while True:\n",
+        "        url = base_url + current_page\n",
+        "        res = requests.get(url)\n",
+        "        soup = BeautifulSoup(res.content, 'html.parser')\n",
+        "\n",
+        "        articles = soup.select(\"article.product_pod\")\n",
+        "\n",
+        "        for article in articles:\n",
+        "            rating = convert_rating(article.p['class'][-1])\n",
+        "            price_str = article.select_one(\".price_color\").text.strip()[1:]  # remove '£'\n",
+        "            price = float(price_str)\n",
+        "\n",
+        "            if rating < min_rating or price > max_price:\n",
+        "                continue\n",
+        "\n",
+        "            link = article.h3.a['href'].replace('../../../', '')\n",
+        "            book_url = base_url + \"catalogue/\" + link\n",
+        "            book_res = requests.get(book_url)\n",
+        "            book_soup = BeautifulSoup(book_res.content, 'html.parser')\n",
+        "\n",
+        "            title = book_soup.h1.text.strip()\n",
+        "            upc = book_soup.find('th', text='UPC').find_next_sibling('td').text.strip()\n",
+        "            availability = book_soup.find('th', text='Availability').find_next_sibling('td').text.strip()\n",
+        "            description_tag = book_soup.select_one('#product_description ~ p')\n",
+        "            description = description_tag.text.strip() if description_tag else \"No description\"\n",
+        "            genre = book_soup.select('ul.breadcrumb li a')[-1].text.strip()\n",
+        "\n",
+        "            books.append({\n",
+        "                \"UPC\": upc,\n",
+        "                \"Title\": title,\n",
+        "                \"Price (£)\": price,\n",
+        "                \"Rating\": rating,\n",
+        "                \"Genre\": genre,\n",
+        "                \"Availability\": availability,\n",
+        "                \"Description\": description\n",
+        "            })\n",
+        "\n",
+        "            time.sleep(0.1)  # Para no sobrecargar el servidor\n",
+        "\n",
+        "        # Ver si hay siguiente página\n",
+        "        next_button = soup.select_one(\"li.next > a\")\n",
+        "        if next_button:\n",
+        "            current_page = \"catalogue/\" + next_button['href']\n",
+        "        else:\n",
+        "            break\n",
+        "\n",
+        "    return pd.DataFrame(books)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "id": "c739c057",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\polur\\AppData\\Local\\Temp\\ipykernel_38604\\546811553.py:33: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "  upc = book_soup.find('th', text='UPC').find_next_sibling('td').text.strip()\n",
+            "C:\\Users\\polur\\AppData\\Local\\Temp\\ipykernel_38604\\546811553.py:34: DeprecationWarning: The 'text' argument to find()-type methods is deprecated. Use 'string' instead.\n",
+            "  availability = book_soup.find('th', text='Availability').find_next_sibling('td').text.strip()\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                UPC                                              Title  \\\n",
+            "0  ce6396b0f23f6ecc                                        Set Me Free   \n",
+            "1  6258a1f6a6dcfe50  The Four Agreements: A Practical Guide to Pers...   \n",
+            "2  6be3beb0793a53e7                                     Sophie's World   \n",
+            "3  657fe5ead67a7767            Untitled Collection: Sabbath Poems 2014   \n",
+            "4  51653ef291ab7ddc                                    This One Summer   \n",
+            "\n",
+            "   Price (£)  Rating           Genre             Availability  \\\n",
+            "0      17.46       5     Young Adult  In stock (19 available)   \n",
+            "1      17.66       5    Spirituality  In stock (18 available)   \n",
+            "2      15.94       5      Philosophy  In stock (18 available)   \n",
+            "3      14.27       4          Poetry  In stock (16 available)   \n",
+            "4      19.49       4  Sequential Art  In stock (16 available)   \n",
+            "\n",
+            "                                         Description  \n",
+            "0  Aaron Ledbetter’s future had been planned out ...  \n",
+            "1  In The Four Agreements, don Miguel Ruiz reveal...  \n",
+            "2  A page-turning novel that is also an explorati...  \n",
+            "3  More than thirty-five years ago, when the weat...  \n",
+            "4  Every summer, Rose goes with her mom and dad t...  \n"
+          ]
+        }
+      ],
+      "source": [
+        "df = scrape_books(min_rating=4, max_price=20)\n",
+        "print(df.head())"
       ]
     }
   ],
@@ -126,7 +244,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -140,7 +258,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
